--- a/test.html
+++ b/test.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-    <script src="/home/rodzewich/Projects/browser-typescript/dest/browser-typescript.js"></script>
+    <script src="/home/rodzewich/Projects/browser-typescript/dest/tsc.js"></script>
     <script type="text/javascript">
-        compiler.configure({
+        tsc.configure({
             version: "1.5",
             encoding: "utf-8",
             base: "/src/"
